--- a/Views/Market/Index.cshtml
+++ b/Views/Market/Index.cshtml
@@ -1,46 +1,74 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div class="d-flex justify-content-center align-items-center mt-5">
-    <div class="col-md-3">
-        <div class="card p-1">
-            <center><h5>Choose filter for brands</h5></center>
+<form action="/Market/SearchResoult" method="get">
+    <div class="d-flex justify-content-center align-items-center mt-5">
+        <div class="col-md-3">
+            <div class="card p-1">
+                <center><h5>Brands</h5></center>
+            </div>
+            <div class="card p-1">
+                <select class="btn btn-secondary dropdown-toggle" name="Brands" id="Brands">
+                    <option class="btn btn-secondary dropdown-toggle" value="allBrands">All</option>
+                    @foreach (var item in Model)
+                    {
+                        if (@item.Brand.Checked == true)
+                        {
+                            <option class="btn btn-secondary dropdown-toggle" value="@item.Brand.Name">@item.Brand.Name</option>
+                        }
+                    }
+                </select>
+            </div>
         </div>
-        <div class="card p-1">
-            <select class="btn btn-secondary dropdown-toggle" name="cars" id="cars">
-                @foreach (var item in Model)
-                {
-                if (@item.Brand.Checked == true)
-                {
-                    <option class="btn btn-secondary dropdown-toggle" value="@item.Brand.Name">@item.Brand.Name</option>
-                }
-
-                    
-                }
-            </select>
+        <div class="col-md-3">
+            <div class="card p-1">
+                <center><h5>Sizes</h5></center>
+            </div>
+            <div class="card p-1">
+                <select class="btn btn-secondary dropdown-toggle" name="Size" id="Size">
+                    <option class="btn btn-secondary dropdown-toggle" value="allSizes">All</option>
+                    @foreach (var item in Model)
+                    {
+                        <option class="btn btn-secondary dropdown-toggle" value="@item.Size">@item.Size</option>
+                    }
+                </select>
+            </div>
         </div>
-        <div class="card p-1">
-            <button class="btn btn-dark">Search</button>
+        <div class="col-md-3">
+            <div class="card p-1">
+                <center><h5>Sugar</h5></center>
+            </div>
+            <div class="card p-1">
+                <select class="btn btn-secondary dropdown-toggle" name="Sugar" id="Sugar">
+                    <option class="btn btn-secondary dropdown-toggle" value="allSugar">All</option>
+                    <option class="btn btn-secondary dropdown-toggle" value="Withoutsugar">Without sugar</option>
+                    <option class="btn btn-secondary dropdown-toggle" value="Withsugar">With sugar</option>
+                </select>
+            </div>
+
+        </div>
+        <div class="col-md-3">
+            <div class="card p-1">
+                <center><h5> </h5></center>
+            </div>
+            <div class="card p-1">
+                <button type="submit" class="btn btn-dark">Search</button>
             </div>
         </div>
     </div>
+</form>
     <div class="d-flex justify-content-center mt-3"> <span class="text text-center">Finding Best Products Now<br> in Your Fingertips</span> </div>
     <div class="row mt-2 g-4">
-
         @foreach (var item in Model)
         {
             <div class="col-md-3">
                 <div class="card p-1">
-                    <div class="d-flex justify-content-between align-items-center p-2">
-                        <div class="flex-column lh-1 imagename"> <span>@item.Name</span></div>
+                    <center><div class="flex-column lh-1 imagename"> <span>@item.Name</span></div></center>
+                    <div class="d-flex justify-content-center align-items-center p-1">
                         <img id="myImg" src="@item.Image" height="100" width="100" />
-                        <div><a class="link-primary" href="@Url.Content("~/Market/UserProfile/?id=" + item.UserID)">Item</a></div>
-
-
                     </div>
-                    <center><div><a class="link-primary" href="@Url.Content("~/Market/UserProfile/?id=" + item.UserID)">Profile</a></div></center>
-                    
+                    <center><div><a class="link-primary" href="@Url.Content("~/Market/UserProfile/?id=" + item.UserID)">User profile</a></div></center>
+                    <center><div><a class="link-primary" href="@Url.Content("~/Market/Product/?id=" + item.ProductID)">Item details</a></div></center>
                 </div>
             </div>
         }
