--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -21,8 +21,10 @@
     <div class="row">
         <div class="col d-md-flex">
             <button type="submit" class="btn btn-primary">Login</button>
-            </form>
-            <h3> </h3>
-        </div>
+            <a href="@Url.Action("Register", "Home")">Register
+            </a>
+         </form>
+         <h3> </h3>
+</div>
     </div>
 </div>
